--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -53,11 +53,15 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="AWSSDK.DynamoDBv2, Version=3.1.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\packages\AWSSDK.DynamoDBv2.3.1.3.0\lib\net45\AWSSDK.DynamoDBv2.dll</HintPath>
+      <HintPath>..\packages\AWSSDK.DynamoDBv2.3.1.4.0\lib\net45\AWSSDK.DynamoDBv2.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ElCamino.AspNet.Identity.Dynamo.v2, Version=2.0.4.0, Culture=neutral, PublicKeyToken=37f09492c24fa4a4, processorArchitecture=MSIL">
       <HintPath>..\packages\ElCamino.AspNet.Identity.Dynamo.v2.2.0.4\lib\net45\ElCamino.AspNet.Identity.Dynamo.v2.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -244,6 +248,7 @@
     <Content Include="jsx\core\view\user\Register.jsx" />
     <Content Include="jsx\core\view\user\Login.jsx" />
     <Content Include="jsx\core\view\user\RecoverPassword.jsx" />
+    <Content Include="jsx\core\view\user\ConfirmEmail.jsx" />
     <Content Include="jsx\core\view\user\ResetPassword.jsx" />
     <Content Include="jsx\core\widget\ErrorAlert.jsx" />
     <Content Include="jsx\core\widget\form\EditableDataView.jsx" />
@@ -279,6 +284,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\" />
+    <Folder Include="logs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -355,7 +361,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\packages\AWSSDK.DynamoDBv2.3.1.3.0\analyzers\dotnet\cs\AWSSDK.DynamoDBv2.CodeAnalysis.dll" />
+    <Analyzer Include="..\packages\AWSSDK.DynamoDBv2.3.1.4.0\analyzers\dotnet\cs\AWSSDK.DynamoDBv2.CodeAnalysis.dll" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
