--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <section name="elcaminoIdentityDynamoDBConfiguration" type="ElCamino.AspNet.Identity.Dynamo.Configuration.IdentityConfigurationSection,ElCamino.AspNet.Identity.Dynamo.v2 " />
   </configSections>
   <appSettings>
@@ -15,6 +16,23 @@
     <add key="AWSAccessKey" value="*** Access Key Id ***" />
     <add key="AWSSecretKey" value="*** Secret Access Key ***" />
   </appSettings>
+  <log4net>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="logs\server.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="DefaultConsole" />
+    </root>
+  </log4net>
   <elcaminoIdentityDynamoDBConfiguration tablePrefix="ilevus_auth_" serviceURL="http://localhost:8000" />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
