--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AWSSDK.Core" version="3.1.5.3" targetFramework="net461" />
-  <package id="AWSSDK.DynamoDBv2" version="3.1.3.0" targetFramework="net461" />
+  <package id="AWSSDK.DynamoDBv2" version="3.1.4.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="ElCamino.AspNet.Identity.Dynamo.v2" version="2.0.4" targetFramework="net461" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
