--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,7 +9,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
 	<connectionStrings>
-		<add name="MongoServerSettings" connectionString="mongodb://localhost:27017" />
+		<add name="connectionstrings" connectionString="mongodb://localhost:27017" />
 	</connectionStrings>
   <appSettings>
     <add key="BaseURL" value="http://localhost:57141/" />
