--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -54,7 +54,8 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.7.0" targetFramework="net461" />
   <package id="Stripe.net" version="10.4.0" targetFramework="net461" />
-  <package id="structuremap" version="3.1.9.463" targetFramework="net461" />
+  <package id="StructureMap" version="4.5.2" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net461" />
